@@ -19,13 +19,13 @@ Trong trường hợp ae nào cần hướng dẫn cụ thể hơn thì
 
     Mình dùng bản 21.0.2 LTS
 
-3. Tạo một project trống bằng IDE của mọi người
+1. Tạo một project trống bằng IDE của mọi người
 
-4. Thêm các file trong thư mục src trên này vào project vừa tạo (copy paste)
+2. Thêm các file trong thư mục src trên này vào project vừa tạo (copy paste)
 
     Với IDE Eclipse, sau khi copy file vào trong thư mục src, bấm `F5` để Refresh để thấy các file đã copy trong `Package Explorer`.
 
-5. Thêm thư viện javafx-sdk vào Classpath của project, thêm VM arguments khi chạy
+3. Thêm thư viện javafx-sdk vào Classpath của project, thêm VM arguments khi chạy
 
     Hướng dẫn cụ thể hơn nữa cho từng IDE ở bên dưới, nếu đọc hướng dẫn khó hiểu quá hãy xem youtube nhé 🥺
 
@@ -33,6 +33,7 @@ Trong trường hợp ae nào cần hướng dẫn cụ thể hơn thì
     * [Với IDE Eclipse](#với-ide-eclipse)
     * [Với IDE NetBeans](#với-ide-netbeans)
 
+4. Bấm chạy thôi <3
     
 #### Với IDE IntellJ
 Vui lòng xem trang tham khảo đã ghi ở trên, trong đó có cả hướng dẫn cho Eclipse và NetBeans, hoặc là YouTube. :=) mình chưa cài IntelliJ chưa viết hướng dẫn được.
@@ -88,3 +89,28 @@ Sau đó ta thêm Library vào Classpath của Project:
     Nếu đã có `$PATH_TO_FX$` sẵn trong `Environment Variables` thì không cần phải thay cụ thể như trong ảnh trên. 🤔
 
 #### Với IDE NetBeans
+1. Tạo 1 Library gồm các file .jar của thư mục `lib`
+
+    Chọn `Tools > Libraries > New Library`, điền tên thư viện mới, chọn `Add JAR/Folder...`
+
+    ![alt text](mymd/netbeans64_hcQqHLA8Vh.gif)
+
+    Vì một lí do gì đấy chưa rõ, khi mình bấm thêm mỗi thư mục `lib` thì nó hơi lỗi lỗi xíu, còn khi vào hẳn trong thư mục `lib` để thêm .jar thì sẽ bình thường.
+
+2. Thêm library vào Classpath khi compile và Modulepath khi chạy *(mình hiểu là như thế, sai mn thông cảm)*
+    
+    Chọn project đang mở, `File > Project Properties` hoặc `chuột phải > Properties`
+
+    Chọn `Libraries`, chọn thẻ `Compile > Classpath +`, thêm thư viện vừa tạo;
+
+    Sau đó sang thẻ `Run > Modulepath +`, lại thêm thư viện vừa tạo.
+
+    ![alt text](mymd/netbeans64_XkbkVQX3N2.gif)
+
+3. Tiếp tục mở `Project Properties > Run`, thêm VM Arguments dưới đây vào `VM Options`:
+        
+        --module-path $PATH_TO_FX$ --add-modules javafx.controls,javafx.fxml
+
+    **Lưu ý:** nếu chưa đặt biến `$PATH_TO_FX$` trong `Environment Variables` của Windows thì cần thay `$PATH_TO_FX$` bằng địa chỉ thư mục `lib`, ví dụ `D:\jfx21\lib`
+
+    ![alt text](mymd/netbeans64_YZ69xHuRc9.gif)
